Fixes several styling issues: * Logo is now the KualiCo logo * Login page not table based anymore, styled correctly (although still hacked) * Dropdown menus now look correct on large screens as well as small * Colors on the proposal screens are now longer red.

--- a/coeus-webapp/src/main/webapp/css/kuali_overrides.css
+++ b/coeus-webapp/src/main/webapp/css/kuali_overrides.css
@@ -22,6 +22,13 @@
 }
 
 /* These override styles exist to get the new look. Eventually this may need to be cleaned up. */
+
+.navbar .nav a.brand {
+	background-image: url('../static/images/KualiCo.png');
+	background-size: 155px;
+	background-repeat: no-repeat;
+}
+
 .navbar .brand {
 	height: 39px !important;
 	width: 164px !important;
