--- a/coeus-webapp/src/main/webapp/css/common/core.css
+++ b/coeus-webapp/src/main/webapp/css/common/core.css
@@ -19,8 +19,168 @@
 
 /* These override styles exist to get the new look. Eventually these rules will be
    placed in a more appropriate place. */
+.logoBrand .actionImage {
+	width: 195px;
+	padding-left: 9px;
+}
+
+#DummyLoginView #u1rttg5q > div:first-child {
+	height: 200px;
+	width: 371px;
+	margin: 0 auto;
+	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.08) inset;
+	-moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.08) inset;
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.08) inset;
+	float: inherit !important;
+	background-image: url('../images/KualiCo.png');
+	background-size: 32px;
+	background-repeat: no-repeat;
+	background-position: 50px 30px;
+	margin-top: 25px;
+}
+
+#Rice-LoginButton.btn-primary {
+	color: #ffffff;
+	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+	background-color: #217a98;
+	background-image: -moz-linear-gradient(top, #2587a9, #1c667f);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#2587a9), to(#1c667f));
+	background-image: -webkit-linear-gradient(top, #2587a9, #1c667f);
+	background-image: -o-linear-gradient(top, #2587a9, #1c667f);
+	background-image: linear-gradient(to bottom, #2587a9, #1c667f);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff2587a9', endColorstr='#ff1c667f', GradientType=0);
+	border-color: #1c667f #1c667f #0e3340;
+	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
+	padding: 2px 10px;
+	font-size: 11.9px;
+	-webkit-border-radius: 3px !important;
+	-moz-border-radius: 3px !important;
+	border-radius: 3px !important;
+	top: 158px;
+	left: 128px;
+}
+
+#DummyLoginView .uif-headerText-span {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 28px;
+	font-weight: bold;
+	top: 39px;
+	left: 127px;
+}
+
+#DummyLoginView #Rice-UserName_label, #DummyLoginView #Rice-Password_label {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	font-weight: normal;
+	line-height: 20px;
+	left: 50px;
+}
+
+#DummyLoginView #Rice-UserName_label {
+	top: 71px;
+}
+
+#DummyLoginView #Rice-Password_label {
+	top: 116px;	
+}
+
+#DummyLoginView #Rice-UserName_control, #DummyLoginView #Rice-Password_control {
+	font-size: 14px;
+	padding: 4px 6px;
+	background-color: #ffffff;
+	border: 1px solid #cccccc;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	-moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+	-webkit-transition: border linear .2s, box-shadow linear .2s;
+	-moz-transition: border linear .2s, box-shadow linear .2s;
+	-o-transition: border linear .2s, box-shadow linear .2s;
+	transition: border linear .2s, box-shadow linear .2s;
+	-webkit-border-radius: 4px !important;
+	-moz-border-radius: 4px !important;
+	border-radius: 4px !important;
+	vertical-align: middle;
+}
+
+#DummyLoginView #Rice-UserName_control {
+	top: 71px;
+	left: 128px;
+	width: 214px;
+}
+
+#DummyLoginView #Rice-UserName_control:focus, #DummyLoginView #Rice-Password_control:focus {
+	background-color: #ffffff;
+	border-color: rgba(82, 168, 236, 0.8);
+	outline: 0;
+	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+	box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+}
+
+#DummyLoginView #Rice-Password_control {
+	top: 115px;
+	left: 128px;
+	width: 214px;
+}
+
+#LoginSection_headerWrapper {
+	position: absolute;
+}
+
+#DummyLoginView #u4t04te {
+	position: absolute;
+}
+
+#Rice-LoginMessage {
+	top: 161px;
+	left: 194px;
+	width: 100px;
+	color: red;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+}
+
+#DummyLoginView section#LoginSection > *, 
+#Rice-UserName_label,
+#Rice-UserName_control,
+#Rice-Password_label,
+#Rice-Password_control,
+#Rice-LoginButton.btn-primary,
+#Rice-LoginMessage,
+#DummyLoginView .uif-headerText-span {
+	position: absolute;
+}
+
+#u1nruckb {
+	float: inherit;
+	text-align: center;
+	width: 100%;
+	right: inherit;
+	margin-top: 20px;
+}
+
+#u1nruckb > p {
+	float: inherit;
+}
+
 body#Uif-Application {
 	background-color: white;
+}
+
+#Uif-Navigation ul.nav.nav-list>.active>a,
+#Uif-Navigation ul.nav.nav-list > li > a:hover, 
+#Uif-Navigation ul.nav > li > a:focus,
+#Uif-Navigation ul.nav.nav-list>li>a:hover,
+.nav .open > a, 
+.nav .open > a:hover, 
+.nav .open > a:focus {
+	background: none repeat scroll 0 0 #0A7194 !important;
+}
+
+.nav-list > li ul.submenu > li.active > a {
+	background-color: #DCF6FF !important;
 }
 
 #Uif-GlobalApplicationHeader, 
@@ -324,14 +484,12 @@ input[type="checkbox"] {
     }
 
     .kc-centralAdminDropdown .dropdown-menu {
-        left: inherit;
         right: 0;
     }
 }
 
 @media (min-width: 1200px) {
     .kc-researcherDropdown .dropdown-menu, .kc-unitDropdown .dropdown-menu {
-        left: inherit;
         right: 0;
     }
 }
